--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
                 <div class="carousel-container">
                     <div class="carousel-wrapper">
                         <div class="carousel-slide active">
-                            <img src="images/carrusel/carrusel1.webp" alt="Productos MB Solutions">
+                            <img src="images/carrusel/carrusel1.jpeg" alt="Productos MB Solutions">
                         </div>
                         <div class="carousel-slide">
-                            <img src="images/carrusel/carrusel2.webp" alt="Productos MB Solutions">
+                            <img src="images/carrusel/carrusel2.jpeg" alt="Productos MB Solutions">
                         </div>
                         <div class="carousel-slide">
-                            <img src="images/carrusel/carrusel3.webp" alt="Productos MB Solutions">
+                            <img src="images/carrusel/carrusel3.jpeg" alt="Productos MB Solutions">
                         </div>
                         <div class="carousel-slide">
-                            <img src="images/carrusel/carrusel4.webp" alt="Productos MB Solutions">
+                            <img src="images/carrusel/carrusel4.jpeg" alt="Productos MB Solutions">
                         </div>
                     </div>
                     <button class="carousel-prev" onclick="previousSlide()">
