--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h1>¡BIENVENIDOS A MB SOLUTIONS CR!</h1>
                 <p class="hero-tagline">Tecnología que conecta contigo.</p>
                 <div class="hero-buttons">
-                    <a href="#servicios" class="btn btn-primary">
+                    <a href="#tienda" class="btn btn-primary">
                         <i class="fas fa-laptop"></i> Ver Tienda
                     </a>
                     <a href="tel:+50662055092" class="btn btn-outline">
