--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="features-grid">
             <div class="feature-item">
                 <div class="feature-icon">
-                    <i class="fas fa-shield-check"></i>
+                    <i class="fas fa-certificate"></i>
                 </div>
                 <h4>Garantía Total</h4>
                 <p>Todos nuestros productos respaldados con garantía</p>
@@ -219,6 +219,10 @@
             <div class="contact-info-box">
                 <h3>Información de Contacto</h3>
                 <div class="contact-item">
+                    <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
+                    <div><h4>Ubicación</h4><p>GMPV+MRQ, Puerto Jiménez<br>Provincia de Puntarenas, Costa Rica</p></div>
+                </div>
+                <div class="contact-item">
                     <div class="contact-icon"><i class="fas fa-phone"></i></div>
                     <div><h4>Teléfono</h4><p>+506 6205 5092</p></div>
                 </div>
@@ -230,6 +234,11 @@
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                     <a href="admin.html" title="Admin"><i class="fas fa-lock"></i></a>
+                </div>
+
+                <!-- MAPA -->
+                <div class="contact-map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3931.2744769876024!2d-83.67651!3d8.38333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa56e9c5d5d5d5d%3A0x5d5d5d5d5d5d5d5d!2sGMPV%2BMRQ%2C%20Puerto%20Jim%C3%A9nez%2C%20Provincia%20de%20Puntarenas!5e0!3m2!1ses!2scr!4v1234567890" width="100%" height="350" style="border:0; border-radius: 15px; margin-top: 2rem;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
 
