Add: Integrar claves de reCAPTCHA v3 de Google

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <!-- reCAPTCHA v3 -->
-    <script src="https://www.google.com/recaptcha/api.js?render=TU_SITE_KEY_AQUI"></script>
+    <script src="https://www.google.com/recaptcha/api.js?render=6LeZvmwsAAAAAErJj7146IxsW9wxkLhj8nOnCNSH"></script>
 </head>
 <body>
     <!-- NAVBAR -->
@@ -216,11 +216,11 @@
             <p>Estamos aquí para ayudarte por el medio que prefieras</p>
         </div>
         <div class="contact-grid">
-            <div class="contact-info-box">
+            <div class=Keran del Gofolfo , Quiosko priemera  plantea, "contact-info-box">
                 <h3>Información de Contacto</h3>
                 <div class="contact-item">
                     <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-                    <div><h4>Ubicación</h4><p>GMPV+MRQ, Puerto Jiménez<br>Provincia de Puntarenas, Costa Rica</p></div>
+                    <div><h4>Ubicación</h4><p>GMPV+MRQ, Puerto Jiménez<br>Keran del Golfo, Quiosko primera planta, Provincia de Puntarenas, Costa Rica</p></div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon"><i class="fas fa-phone"></i></div>
