Security: Agregar sistema de login para panel admin con usuario y contraseña

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <p>Estamos aquí para ayudarte por el medio que prefieras</p>
         </div>
         <div class="contact-grid">
-            <div class=Keran del Gofolfo , Quiosko priemera  plantea, "contact-info-box">
+            <div class="contact-info-box">
                 <h3>Información de Contacto</h3>
                 <div class="contact-item">
                     <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
@@ -233,7 +233,7 @@
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="admin.html" title="Admin"><i class="fas fa-lock"></i></a>
+                    <a href="login.html" title="Admin"><i class="fas fa-lock"></i></a>
                 </div>
 
                 <!-- MAPA -->
