--- a/admin.html
+++ b/admin.html
@@ -31,6 +31,12 @@
             color: var(--dark);
         }
 
+        .admin-header-actions {
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+        }
+
         .admin-back-btn {
             display: flex;
             align-items: center;
@@ -43,6 +49,25 @@
 
         .admin-back-btn:hover {
             gap: 1rem;
+        }
+
+        .admin-logout-btn {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.8rem 1.5rem;
+            background: #fee2e2;
+            color: #991b1b;
+            border: none;
+            border-radius: 10px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .admin-logout-btn:hover {
+            background: #fecaca;
+            transform: translateY(-2px);
         }
 
         .admin-content {
@@ -299,9 +324,14 @@
     <div class="admin-container">
         <div class="admin-header">
             <h1><i class="fas fa-box"></i> Panel de Administración</h1>
-            <a href="index.html" class="admin-back-btn">
-                <i class="fas fa-arrow-left"></i> Volver a Tienda
-            </a>
+            <div class="admin-header-actions">
+                <a href="index.html" class="admin-back-btn">
+                    <i class="fas fa-arrow-left"></i> Volver a Tienda
+                </a>
+                <button onclick="handleLogout()" class="admin-logout-btn">
+                    <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
+                </button>
+            </div>
         </div>
 
         <div class="admin-content">
@@ -389,6 +419,23 @@
 
     <!-- SCRIPTS -->
     <script>
+        // ========================================
+        // VERIFICACIÓN DE AUTENTICACIÓN
+        // ========================================
+        window.addEventListener('load', () => {
+            const adminToken = sessionStorage.getItem('adminToken');
+            if (!adminToken) {
+                window.location.href = 'login.html';
+            }
+        });
+
+        function handleLogout() {
+            if (confirm('¿Estás seguro de que deseas cerrar sesión?')) {
+                sessionStorage.removeItem('adminToken');
+                window.location.href = 'login.html';
+            }
+        }
+
         // ========================================
         // MENÚ MÓVIL
         // ========================================
