--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="styles.css">
     <!-- reCAPTCHA v3 -->
     <script src="https://www.google.com/recaptcha/api.js?render=6LeZvmwsAAAAAErJj7146IxsW9wxkLhj8nOnCNSH"></script>
+    <!-- Configuración de API - Detecta automáticamente prod/dev -->
+    <script src="api-config.js"></script>
 </head>
 <body>
     <!-- NAVBAR -->
