--- a/login.html
+++ b/login.html
@@ -186,6 +186,8 @@
             }
         }
     </style>
+    <!-- Configuración de API - Detecta automáticamente prod/dev -->
+    <script src="api-config.js"></script>
 </head>
 <body>
     <div class="login-container">
@@ -238,8 +240,8 @@
     </div>
 
     <script>
-        // API base URL
-        const API_BASE = 'http://localhost:3000';
+        // API_BASE definido en api-config.js
+        // Se adapta automáticamente según el dominio
 
         async function handleLogin(event) {
             event.preventDefault();
