--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="login.html" id="btnLogin" title="Admin"><i class="fas fa-lock"></i></a>
+                    <a href="/login" id="btnLogin" title="Admin"><i class="fas fa-lock"></i></a>
                     <button id="btnLogoutHeader" style="display:none; background: none; border: none; cursor: pointer; color: inherit; font-size: 18px;" title="Logout"><i class="fas fa-sign-out-alt"></i></button>
                 </div>
 
