--- a/login.html
+++ b/login.html
@@ -278,7 +278,7 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ usuario: username, contrasena: password })
+                    body: JSON.stringify({ usuario: username, contraseña: password })
                 });
 
                 const data = await response.json();
