changes of paths and improvement

--- a/backend/admin/admin.html
+++ b/backend/admin/admin.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <style>
         .admin-container {
             max-width: 1400px;
@@ -299,14 +299,14 @@
         }
     </style>
     <!-- Configuración de API - Detecta automáticamente prod/dev -->
-    <script src="../../api-config.js"></script>
+    <script src="../api-config.js"></script>
 </head>
 <body>
     <!-- NAVBAR (misma que en index.html) -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo-container">
-                <img src="../../images/mbslogo.webp" alt="MB Solutions Logo" class="logo-img">
+                <img src="../images/mbslogo.webp" alt="MB Solutions Logo" class="logo-img">
                 <div class="logo-text">MB Solutions</div>
             </div>
             <div class="nav-toggle" onclick="toggleMenu()">
