--- a/backend/admin/login.html
+++ b/backend/admin/login.html
@@ -187,7 +187,7 @@
         }
     </style>
     <!-- Configuración de API - Detecta automáticamente prod/dev -->
-    <script src="../../api-config.js"></script>
+    <script src="../api-config.js"></script>
 </head>
 <body>
     <div class="login-container">
