tax logic change and $ simbol to C

--- a/backend/admin/admin.html
+++ b/backend/admin/admin.html
@@ -375,6 +375,7 @@
                                 <option value="desktops">Computadoras</option>
                                 <option value="accesorios">Accesorios</option>
                                 <option value="componentes">Componentes</option>
+                                <option value="consumibles">Consumibles</option>
                             </select>
                         </div>
                     </div>
