--- a/index.html
+++ b/index.html
@@ -4,12 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MB Solutions CR | Tienda de Computadoras y Soporte Técnico</title>
-    <meta name="description" content="Venta de equipos tecnológicos y soporte técnico en Costa Rica. Computadoras, laptops, accesorios y reparación profesional.">
-    <meta name="keywords" content="computadoras costa rica, soporte técnico, reparación pc, venta laptops, MB Solutions">
+    <meta name="description" content="MB Solutions CR: Tu tienda de tecnología de confianza en la Zona Sur de Costa Rica. Venta de equipos y soporte técnico profesional.">
+    <meta name="keywords" content="computadoras zona sur, soporte técnico Pérez Zeledón, MB Solutions CR, laptops Costa Rica, reparación de computadoras Golfito, cámaras de seguridad zona sur, tecnología Puerto Jiménez, computadoras Puntarenas">
     <meta property="og:title" content="MB Solutions CR - Tecnología que conecta contigo">
-    <meta property="og:description" content="Tienda de computadoras y soporte técnico profesional">
+    <meta property="og:description" content="MB Solutions CR: Tu tienda de tecnología de confianza en la Zona Sur de Costa Rica. Venta de equipos y soporte técnico profesional.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mbsolutionscr.com">
+    <meta property="og:image" content="https://mbsolutionscr.com/images/mbslogo.webp">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "MB Solutions CR",
+      "image": "https://mbsolutionscr.com/images/mbslogo.webp",
+      "telephone": "+50662055092",
+      "url": "https://mbsolutionscr.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Centro Comercial Keran del Golfo, Calle del Comercio",
+        "addressLocality": "Puerto Jiménez",
+        "addressRegion": "Puntarenas",
+        "postalCode": "61301",
+        "addressCountry": "CR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 8.5367678,
+        "longitude": -83.3056018
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+          "opens": "08:00",
+          "closes": "18:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": "Saturday",
+          "opens": "08:00",
+          "closes": "17:00"
+        }
+      ],
+      "priceRange": "\u20a1\u20a1",
+      "sameAs": "https://maps.app.goo.gl/LHlQCVjlXttOuBY9V"
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -226,11 +266,11 @@
                 <h3>Información de Contacto</h3>
                 <div class="contact-item">
                     <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-                    <div><h4>Ubicación</h4><p>GMPV+MRQ, Puerto Jiménez<br>Keran del Golfo, Quiosko primera planta, Provincia de Puntarenas, Costa Rica</p></div>
+                    <div><h4>Ubicación</h4><p>Centro Comercial Keran del Golfo,<br>Calle del Comercio, Puerto Jiménez,<br>Puntarenas, Costa Rica, 61301</p></div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon"><i class="fas fa-phone"></i></div>
-                    <div><h4>Teléfono</h4><p>+506 6205 5092</p></div>
+                    <div><h4>Teléfono</h4><p>+506 6205 5092</p><a href="https://maps.app.goo.gl/LHlQCVjlXttOuBY9V" target="_blank" rel="noopener" style="font-size:0.85rem; color:var(--primary); text-decoration:none;"><i class="fas fa-star" style="color:#f59e0b;"></i> Ver reseñas en Google Maps</a></div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon"><i class="fas fa-envelope"></i></div>
@@ -245,7 +285,15 @@
 
                 <!-- MAPA -->
                 <div class="contact-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3931.2744769876024!2d-83.67651!3d8.38333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa56e9c5d5d5d5d%3A0x5d5d5d5d5d5d5d5d!2sGMPV%2BMRQ%2C%20Puerto%20Jim%C3%A9nez%2C%20Provincia%20de%20Puntarenas!5e0!3m2!1ses!2scr!4v1234567890" width="100%" height="350" style="border:0; border-radius: 15px; margin-top: 2rem;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.4357303350414!2d-83.3056018!3d8.5367678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa463517e95775d%3A0xd870ccdf9314fe80!2sMB%20Solutions%20CR!5e0!3m2!1ses!2scr!4v1715000000000!5m2!1ses!2scr" 
+        width="100%" 
+        height="350" 
+        style="border:0; border-radius: 15px; margin-top: 2rem;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
                 </div>
             </div>
 
