--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="PEGA_TU_CÓDIGO_AQUÍ" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MB Solutions CR | Tienda de Computadoras y Soporte Técnico</title>
     <meta name="description" content="MB Solutions CR: Tu tienda de tecnología de confianza en la Zona Sur de Costa Rica. Venta de equipos y soporte técnico profesional.">
@@ -285,15 +286,17 @@
 
                 <!-- MAPA -->
                 <div class="contact-map">
-                    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.4357303350414!2d-83.3056018!3d8.5367678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa463517e95775d%3A0xd870ccdf9314fe80!2sMB%20Solutions%20CR!5e0!3m2!1ses!2scr!4v1715000000000!5m2!1ses!2scr" 
-        width="100%" 
-        height="350" 
-        style="border:0; border-radius: 15px; margin-top: 2rem;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+                    <div style="width: 100%; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.3); margin-top: 2rem;">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.5317378734913!2d-83.30779042407223!3d8.536767791505374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa463517695775d%3A0x3770ccdfd314fef8!2sMB%20Solutions%20CR!5e0!3m2!1ses-419!2scr!4v1700000000000!5m2!1ses-419!2scr" 
+                            width="100%" 
+                            height="450" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
                 </div>
             </div>
 
