--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <li><a href="#tienda">Tienda</a></li>
                 <li><a href="#nosotros">Nosotros</a></li>
                 <li><a href="#contacto" class="nav-cta">Contacto</a></li>
-                <li><a href="cart.html" style="position: relative;">🛒 Carrito <span class="cart-count" style="display:none; position: absolute; top: -5px; right: -10px; background: #e74c3c; color: white; border-radius: 50%; width: 20px; height: 20px; display: flex; align-items: center; justify-content: center; font-size: 12px;">0</span></a></li>
+                <li><a href="cart.html" style="position: relative;">🛒 Carrito <span class="cart-count" style="display:none; position: absolute; top: -5px; right: -10px; background: #e74c3c; color: white; border-radius: 50%; min-width: 20px; height: 20px; align-items: center; justify-content: center; font-size: 12px; padding: 0 4px;">0</span></a></li>
             </ul>
         </div>
     </nav>
@@ -205,10 +205,10 @@
                             <p id="modalProductDescription"></p>
                         </div>
                         <div class="product-actions">
-                            <button class="btn btn-primary" onclick="addProductToCart()" style="width: 48%; justify-content: center; background: #27ae60;">
+                            <button class="btn btn-primary btn-action" onclick="addProductToCart()" style="background: #27ae60;">
                                 <i class="fas fa-shopping-cart"></i> Agregar al Carrito
                             </button>
-                            <button class="btn btn-primary" onclick="contactProduct()" style="width: 48%; justify-content: center;">
+                            <button class="btn btn-primary btn-action" onclick="contactProduct()">
                                 <i class="fab fa-whatsapp"></i> WhatsApp
                             </button>
                         </div>
