--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
 
             <div class="contact-forms-container">
                 <div class="contact-tabs">
-                    <button class="contact-tab active" onclick="switchContactTab('whatsapp')">
+                    <button class="contact-tab active" onclick="switchContactTab('whatsapp', event)">
                         <i class="fab fa-whatsapp"></i> WhatsApp
                     </button>
-                    <button class="contact-tab" onclick="switchContactTab('email')">
+                    <button class="contact-tab" onclick="switchContactTab('email', event)">
                         <i class="fas fa-envelope"></i> Email
                     </button>
                 </div>
