--- a/producto.html
+++ b/producto.html
@@ -27,7 +27,8 @@
         /* ===== PÁGINA DE PRODUCTO ===== */
         .product-page {
             min-height: 100vh;
-            background: var(--bg-primary, #0a0a0f);
+            min-height: 100dvh;
+            background: #0a0a0f;
             padding-top: 80px;
         }
 
